fix: image label in mnist.html

--- a/templates/mnist.html
+++ b/templates/mnist.html
@@ -12,7 +12,7 @@
     <h1>Digit Predictor</h1>
 
     <div>
-        <label for="image_upload">Sepal length</label>
+        <label for="image_upload">Uploaded image</label>
         <input type="file" id="image_upload">
     </div>
 
